--- a/Milk-Collection-qa.yml
+++ b/Milk-Collection-qa.yml
@@ -5,7 +5,7 @@ milk-collection-contacts:
   message: "Milk-Collection QA"
   contactDetails:
     name: "Edward Malte"
-    email: "lGm4o@example.com"
+    email: "qa@example.com"
   onCallSupport:
     - 317888
     - 317999
