--- a/Milk-Collection.yml
+++ b/Milk-Collection.yml
@@ -5,7 +5,7 @@ milk-collection-contacts:
   message: "Milk-Collection"
   contactDetails:
     name: "Edward Malte"
-    email: "lGm4o@example.com"
+    email: "default@example.com"
   onCallSupport:
     - 317888
     - 317999
