--- a/Persons-prod.yml
+++ b/Persons-prod.yml
@@ -2,7 +2,7 @@ build:
   version: 1.0
 
 persons-contacts:
-  message: "Persons Production"
+  message: "Persons Production Test of Test"
   contactDetails:
     name: "Edward Malte"
     email: "lGm4o@example.com"
