--- a/Financial-Management-prod.yml
+++ b/Financial-Management-prod.yml
@@ -2,7 +2,7 @@ build:
   version: 1.0
 
 financial-management-contacts:
-  message: "Financial-Management Production ____!"
+  message: "Financial-Management Production H!"
   contactDetails:
     name: "Edward Malte"
     email: "lGm4o@example.com"
