--- a/Milk-Collection.yml
+++ b/Milk-Collection.yml
@@ -2,7 +2,7 @@ build:
   version: 1.0
 
 milk-collection-contacts:
-  message: "Milk-Collection"
+  message: "Milk-Collection D"
   contactDetails:
     name: "Edward Malte"
     email: "default@example.com"
