--- a/Financial-Management.yml
+++ b/Financial-Management.yml
@@ -2,7 +2,7 @@ build:
   version: 1.0
 
 financial-management-contacts:
-  message: "Financial-Management"
+  message: "Financial-Management D"
   contactDetails:
     name: "Edward Malte"
     email: "lGm4o@example.com"
