--- a/Persons.yml
+++ b/Persons.yml
@@ -2,7 +2,7 @@ build:
   version: 1.0
 
 persons-contacts:
-  message: "Persons"
+  message: "Persons D"
   contactDetails:
     name: "Edward Malte"
     email: "lGm4o@example.com"
